--- a/healthServiceApp/src/main/resources/application.properties
+++ b/healthServiceApp/src/main/resources/application.properties
@@ -15,3 +15,6 @@ logging.level.blog=WARN
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor=TRACE
+
+spring.http.multipart.enabled=true
+spring.http.multipart.max-file-size=10MB
